--- a/body/ref.bib
+++ b/body/ref.bib
@@ -1,28 +1,4 @@
 % use `texdoc biblatex` to get help
-@www{zjuthesisrules,
-    title = {浙江大学本科生毕业论文（设计）编写规则},
-    author = {浙江大学本科生院},
-    year = {2018},
-    url = {http://bksy.zju.edu.cn/attachments/2018-01/01-1517384518-1149149.pdf},
-}
-@www{tikz,
-    title = {tikz宏包},
-    author = {Till Tantau},
-    year = {2018},
-    url = {https://sourceforge.net/projects/pgf/},
-}
-@www{zjuthesis,
-    title = {浙江大学毕业设计/论文模板},
-    author = {王子轩},
-    year = {2019},
-    url = {https://github.com/TheNetAdmin/zjuthesis},
-}
-@www{zjugradthesisrules,
-    title = {浙江大学研究生学位论文编写规则},
-    author = {浙江大学研究生院},
-    year = {2008},
-    url = {http://grs.zju.edu.cn/redir.php?catalog_id=10038&object_id=12877},
-}
 
 @article{杨博2021基于聚类和多元地质统计学的电,
   title={基于聚类和多元地质统计学的电—震联合建模约束反演技术及应用},
@@ -32,4 +8,265 @@
   number={3},
   pages={670--677},
   year={2021}
+}
+
+@article{lelievre2012joint,
+  title={Joint inversion of seismic traveltimes and gravity data on unstructured grids with application to mineral exploration},
+  author={Leli{\`e}vre, Peter G and Farquharson, Colin G and Hurich, Charles A},
+  journal={Geophysics},
+  volume={77},
+  number={1},
+  pages={K1--K15},
+  year={2012},
+  publisher={Society of Exploration Geophysicists}
+}
+
+@article{gallardo2003characterization,
+  title={Characterization of heterogeneous near-surface materials by joint 2D inversion of dc resistivity and seismic data},
+  author={Gallardo, Luis A and Meju, Max A},
+  journal={Geophysical Research Letters},
+  volume={30},
+  number={13},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{moorkamp2013verification,
+  title={Verification of velocity-resistivity relationships derived from structural joint inversion with borehole data},
+  author={Moorkamp, Max and Roberts, AW and Jegen, M and Heincke, Bj{\"o}rn and Hobbs, RW},
+  journal={Geophysical Research Letters},
+  volume={40},
+  number={14},
+  pages={3596--3601},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{shi20173,
+  title={3-D cross-gradient joint inversion of seismic refraction and DC resistivity data},
+  author={Shi, Zhanjie and Hobbs, Richard W and Moorkamp, Max and Tian, Gang and Jiang, Lu},
+  journal={Journal of Applied Geophysics},
+  volume={141},
+  pages={54--67},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@inproceedings{molodtsov2011joint,
+  title={Joint inversion of seismic and magnetotelluric data with structural constraint based on dot product of image gradients},
+  author={Molodtsov, Dmitry and Kashtan, Boris and Roslov, Yuri},
+  booktitle={2011 SEG Annual Meeting},
+  year={2011},
+  organization={OnePetro}
+}
+
+@article{colombo2018coupling,
+  title={Coupling strategies in multiparameter geophysical joint inversion},
+  author={Colombo, Daniele and Rovetta, Diego},
+  journal={Geophysical Journal International},
+  volume={215},
+  number={2},
+  pages={1171--1184},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@article{zhdanov2012generalized,
+  title={Generalized joint inversion of multimodal geophysical data using Gramian constraints},
+  author={Zhdanov, Michael S and Gribenko, Alexander and Wilson, Glenn},
+  journal={Geophysical Research Letters},
+  volume={39},
+  number={9},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+
+@inproceedings{lin2017joint,
+  title={Joint inversion of seismic and gravity gradiometry data using Gramian constraints},
+  author={Lin, Wei and Zhdanov, Michael},
+  booktitle={2017 SEG International Exposition and Annual Meeting},
+  year={2017},
+  organization={OnePetro}
+}
+
+@article{haber1997joint,
+  title={Joint inversion: a structural approach},
+  author={Haber, E and Oldenburg, D},
+  journal={Inverse problems},
+  volume={13},
+  number={1},
+  pages={63},
+  year={1997},
+  publisher={IOP Publishing}
+}
+
+@article{li2019alternating,
+  title={Alternating joint inversion of controlled-source electromagnetic and seismic data using the joint total variation constraint},
+  author={Li, Gang and Cai, Hongzhu and Li, Chun-Feng},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  volume={57},
+  number={8},
+  pages={5914--5922},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{brown2012seismically,
+  title={Seismically regularized controlled-source electromagnetic inversion},
+  author={Brown, Vanessa and Key, Kerry and Singh, Satish},
+  journal={Geophysics},
+  volume={77},
+  number={1},
+  pages={E57--E65},
+  year={2012},
+  publisher={Society of Exploration Geophysicists}
+}
+
+@article{zhou2014image,
+  title={Image-guided inversion of electrical resistivity data},
+  author={Zhou, Jieyi and Revil, Andre and Karaoulis, Marios and Hale, Dave and Doetsch, Joseph and Cuttler, S},
+  journal={Geophysical Journal International},
+  volume={197},
+  number={1},
+  pages={292--309},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
+@article{hauck2011new,
+  title={A new model for estimating subsurface ice content based on combined electrical and seismic data sets},
+  author={Hauck, Christian and B{\"o}ttcher, M and Maurer, Hansruedi},
+  journal={The Cryosphere},
+  volume={5},
+  number={2},
+  pages={453--468},
+  year={2011},
+  publisher={Copernicus Publications G{\"o}ttingen, Germany}
+}
+
+@article{afonso2016imaging,
+  title={Imaging the lithosphere and upper mantle: Where we are at and where we are going},
+  author={Afonso, Juan Carlos and Moorkamp, Max and Fullea, Javier},
+  journal={Integrated imaging of the earth: Theory and applications},
+  pages={191--218},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
+@article{moorkamp2017integrating,
+  title={Integrating electromagnetic data with other geophysical observations for enhanced imaging of the earth: a tutorial and review},
+  author={Moorkamp, Max},
+  journal={Surveys in Geophysics},
+  volume={38},
+  number={5},
+  pages={935--962},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{haber2013model,
+  title={Model fusion and joint inversion},
+  author={Haber, Eldad and Holtzman Gazit, Michal},
+  journal={Surveys in Geophysics},
+  volume={34},
+  pages={675--695},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{sun2015multidomain,
+  title={Multidomain petrophysically constrained inversion and geology differentiation using guided fuzzy c-means clustering},
+  author={Sun, Jiajia and Li, Yaoguo},
+  journal={Geophysics},
+  volume={80},
+  number={4},
+  pages={ID1--ID18},
+  year={2015},
+  publisher={Society of Exploration Geophysicists}
+}
+
+@article{sun2016joint,
+  title={Joint inversion of multiple geophysical data using guided fuzzy c-means clustering},
+  author={Sun, Jiajia and Li, Yaoguo},
+  journal={Geophysics},
+  volume={81},
+  number={3},
+  pages={ID37--ID57},
+  year={2016},
+  publisher={Society of Exploration Geophysicists}
+}
+
+@article{wheelock2015advantages,
+  title={The advantages of logarithmically scaled data for electromagnetic inversion},
+  author={Wheelock, Brent and Constable, Steven and Key, Kerry},
+  journal={Geophysical Journal International},
+  volume={201},
+  number={3},
+  pages={1765--1780},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
+@article{wheelock2015advantages,
+  title={The advantages of logarithmically scaled data for electromagnetic inversion},
+  author={Wheelock, Brent and Constable, Steven and Key, Kerry},
+  journal={Geophysical Journal International},
+  volume={201},
+  number={3},
+  pages={1765--1780},
+  year={2015},
+  publisher={Oxford University Press}
+}
+
+@article{hansen2006linear,
+  title={Linear inverse Gaussian theory and geostatistics},
+  author={Hansen, Thomas Mejer and Journel, Andre G and Tarantola, Albert and Mosegaard, Klaus},
+  journal={Geophysics},
+  volume={71},
+  number={6},
+  pages={R101--R111},
+  year={2006},
+  publisher={Society of Exploration Geophysicists}
+}
+
+@article{nocedal2006conjugate,
+  title={Conjugate gradient methods},
+  author={Nocedal, Jorge and Wright, Stephen J},
+  journal={Numerical optimization},
+  pages={101--134},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{backus1967numerical,
+  title={Numerical applications of a formalism for geophysical inverse problems},
+  author={Backus, George E and Gilbert, J Fo},
+  journal={Geophysical Journal International},
+  volume={13},
+  number={1-3},
+  pages={247--276},
+  year={1967},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{munoz2006beyond,
+  title={Beyond smooth inversion: the use of nullspace projection for the exploration of non-uniqueness in MT},
+  author={Mu{\~n}oz, G and Rath, V},
+  journal={Geophysical Journal International},
+  volume={164},
+  number={2},
+  pages={301--311},
+  year={2006},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{zhang2004novel,
+  title={A novel kernelized fuzzy c-means algorithm with application in medical image segmentation},
+  author={Zhang, Dao-Qiang and Chen, Song-Can},
+  journal={Artificial intelligence in medicine},
+  volume={32},
+  number={1},
+  pages={37--50},
+  year={2004},
+  publisher={Elsevier}
 }
