--- a/body/undergraduate/final/1-introduction.tex
+++ b/body/undergraduate/final/1-introduction.tex
@@ -4,11 +4,44 @@
 
 \subsection{本研究的背景和意义}
 
-我们了解地下介质的结构和组成的主要方式就是通过地球物理反演观测。通过钻孔数据我们可以观测到约5km深处的地下介质，将这部分数据与来自模型假设计算出的数值模拟输出的数据比较，我们就能得到描述区域地下结构的信息。模型假设通常是通过正演建模反复饰演生成的一组模型，它往往是对地质结构抽象的描述，并且对后续反演模型起到重要作用。近年来，由于计算能力的快速发展，大多数的地球物理模型已不再需要大量实验，而是通过反演程序构建。此类“可接受”的模型——标准通常是最终模型预测的数据符合最小二乘意义上的观测结果——存在着大量的算法去寻找一个或一组满足此类标准的结果（如Nocedal, 2006）。
+我们了解地下介质的结构和组成的主要方式就是通过地球物理反演观测。通过钻孔数据我们可以观测到约5千米深处的地下介质，将这部分数据与来自模型假设计算出的数值模拟输出的数据比较，我们就能得到描述区域地下结构的信息。模型假设通常是通过正演建模反复试验生成的一组模型，它往往是对地质结构抽象的描述，并且对后续反演模型起到重要作用。近年来，由于计算能力的快速发展，大多数的地球物理模型已不再需要大量实验，而是通过反演程序构建。此类“可接受”的模型——标准通常是最终模型预测的数据符合最小二乘意义上的观测结果——存在着大量的算法去寻找一个或一组满足此类标准的结果\cite{nocedal2006conjugate}。
 
-尽管对与模型或是反演算法有着深入的研究，且目前它们的精度仍在不断提高，但是地球物理反演总是不稳定的和非唯一的。不稳定性性指的是相似的数据会导致差异极大的模型（如Backus and Gilbert, 1967），非唯一性指的是无限数量的模型可以解释数据相同程度的非唯一性（如Munooz and Rath, 2006），这是因为我们测量的尺度远小于地球本身或是地质变化的尺度。除此之外，我们的测量不可避免地会受到噪声的污染，这会导致我们在解释数据时需要考虑噪声带来的歧义。但是这种由于地球物理反演方法本身带来的歧义是与使用的观测手段紧密联系的，如大地电磁方法对电阻层的厚度敏感而对电阻率本身不敏感，而直流电法对电阻（电阻率与厚度的乘积）敏感。如果能够合理利用这种互补性，我们也许可以对地球内部进行更精密的观测。\cite{杨博2021基于聚类和多元地质统计学的电}
+尽管对与模型或是反演算法有着深入的研究，且目前它们的精度仍在不断提高，但是地球物理反演总是不稳定的和非唯一的。不稳定性性指的是相似的数据会导致差异极大的模型\cite{backus1967numerical}，非唯一性指的是无限数量的模型可以解释数据相同程度的非唯一性\cite{munoz2006beyond}，这是因为我们测量的尺度远小于地球本身或是地质变化的尺度。除此之外，我们的测量不可避免地会受到噪声的污染，这会导致我们在解释数据时需要考虑噪声带来的歧义。但是这种由于地球物理反演方法本身带来的歧义是与使用的观测手段紧密联系的，如单一地震数据在有些情况下对深层结构成像不清晰，而大地电磁方法则因其探测深度大且横向分辨率高从而可以作为地震方法的补充。如果能够合理利用这种互补性，我们也许可以对地球内部进行更精密的观测。\cite{杨博2021基于聚类和多元地质统计学的电}
+
+由于浅地表复杂的地质结构，它的不同物性参数往往难以像深部一样用关系式表示。在浅地表环境下，同一类介质的物性相对集中，在分界面附近物性呈现逐渐变化或是掺杂的情况，因此得到准确的类簇信息再在浅地表环境中并非是意见容易的事。为了获取更加准确的介质物性值和地质分异结构信息，本文将核聚类耦合方法引入到地震折射走时和直流电阻率数据联合反演中。为了适应城市复杂噪声环境地震勘探工作的开展，本文提出地震初至走时和直流电阻率数据的核聚类联合反演，同时，引入密度峰值聚类（DPC）方法，处理先验物性数据，获取准确的类簇数和类簇中心值，改善核聚类联合反演流程。
 
 \subsection{国内外的研究现状}
 
+利用不同类型的地球物理勘探数据进行成像，以及借助多种学科进行综合解释是弥补单一类型地球物理观测方法不足的重要手段。利用不同类型、不同分辨率的地球物理数据集可以让我们更精确地恢复地下的结构以及揭示地下的特性。如利用低精度的重力数据和高精度的地震数据，可以缓解地震数据反演横向分辨率较差的问题\cite{lelievre2012joint}。而再综合多种数据的方法中，联合反演是进行物理数据集综合解释的有效手段，它的目标是将来自多种不同类型、不同精度的地球物理数据集的信息或其他类型的先验信息（如钻孔数据等）组合在同一个反演算法中，通过优化模型，最终建立不同地球物理模型参数之间的耦合关系。目前的联合反演方法大致有两种，分别为结构耦合联合反演和物性关系类联合反演。
+
+首先是结构耦合反演方法，它假设不同物理参数在同一地下介质中具有完全或部分相同的地下空间分布结构，通过最小化拉普拉斯算子、点乘算子和叉积算子等结构算子来增强模型之间的结构相似性\cite{haber1997joint}。Gallardo和Meju引入交叉梯度法第一次实现了折射波地震走时和直流电阻率数据联合反演\cite{gallardo2003characterization}，后来Moorkamp等通过该方法重建了速度和电导率之间的关系\cite{moorkamp2013verification}；Shi等在交叉梯度方法的基础上引入了约束，从而提高反演的准确性，降低了反演的不稳定性\cite{shi20173}。Molodtsov等使用梯度相加约束方法，弥补了梯度法在模型梯度零区域无法生效的缺点\cite{moorkamp2013verification}，这也成为Colombo等人在海洋环境和复杂近地表情况下重建盐层速度模型的基础\cite{colombo2018coupling}。Molodtsov提出了点积结构约束，它的约束比交叉梯度约束更加严格，但可以有效缩小模型解的范围\cite{molodtsov2011joint}。Li等提出了一种利用合全变差 (JTV) 的结构约束的可控源电磁（CSEM）和井间地震数据进行联合反演，这种方法对梯度变化陡峭的数据适用\cite{li2019alternating}。结构耦合反演是一种弱约束，尽管被用在很多实际地球物理探测中，但是多适用于地层情况变化不大且空间尺度较大的区域，难以适应小区域如浅地表的复杂环境。
+
+为了弥补结构耦合对于空间分辨率的弱势，Brown等提出了“引导反演”的方法。该方法利用不同数据集之间分辨率的差异，将高分辨率数据集中的结构信息放入正则化约束，从而在对低分辨率数据集进行反演时能够提高精度。该方法多用于GPR、地震等与电磁法、直流电阻率法的联合反演中，前者高分辨率的数据可以弥补后者地分辨率的不足\cite{zhou2014image}。
+
+另一种岩石性质关系耦合方法是根据不同物理参数的经验关系或推导的关系，将多组不同的物理参数组合成一组模型参数进行反演，从而提高反演的精度。例如，可以把地球物理参数转换成诸如孔隙度、渗透率的岩石物理参数进行反演\cite{hauck2011new}，亦可以是地质参数，如温度和地幔成分\cite{afonso2016imaging}，可以看到这个方法可以将地球物理反演与地质方法结合起来，反演结果直接与地质目标相对应。但是这种方法大多因为不同物理参数得到的经验关系或推导得到的物理关系与实际调查的地质区域之间有较大的差距，所以在复杂问题中该方法难以推广。
+
+当有多个地球物理数据集可用时，有学者提出利用无监督的互信息联合反演和聚类联合反演方法。互信息（Mutual Information, MI）是衡量随机变量之间相互依赖程度的度量，常应用在自然语言处理(NLP)、计算机视觉(CV)等领域。Haber等提出将MI方法作为一种耦合约束方法引入到地球物理联合反演中\cite{haber2013model}，该方法基于两个变量之间的对应最大化，从而导致信息可变性的降低。但是，由于互信息具有高度非线性，该方法在很长一段时间内都没成功应用到联合反演中，仅仅能在单独反演中使用。后来Moorkamp通过更改MI目标函数和反演参数信息，成功地将MI方法应用到大地电磁与重力和大地电磁与航空磁法的联合反演中\cite{moorkamp2017integrating}。但是这种方法由于缺少地质约束，得到的结果往往会很光滑，所以，通过互信息反演得到的模型可能会有边界被模糊，或是反演属性值与理论值之间有较大的偏差等等。
+
+为了改进互信息方法对地下地质情况反映欠缺的缺点，聚类耦合方法被开发出来用于将岩石物理数据和地质信息统合到一个方案中。在聚类耦合方法中，岩石物理数据和地质信息在每一次迭代中都会互相作用，以产生更好的地质模型以及地质分类\cite{sun2015multidomain}。为了更加有效地利用先验信息，提高反演的精度，Sun等提出了GFCM（guided fuzzy c-means clustering, 引导模糊C-均值）聚类反演方法，在该方法的目标函数中添加先验物性信息引导项，使反演模型参数值靠近先验物性值。该方法已经在多种数据集的处理中得到印证，如电震\cite{杨博2021基于聚类和多元地质统计学的电}；重磁\cite{sun2016joint}等。但是，该方法对簇信息的正确性要求较高，如果得到了错误的簇信息，反演结果会表现出很强的不稳定性。而且，FCM聚类一般对圆形类簇刻画较好，对非圆形类簇描述能力较差。
+
+总而言之，面对复杂的浅地表介质和尚不完善的各种耦合方法，如何选取有效的耦合方法对于揭示浅地表的地下结构具有十分重要的意义。核聚类将样本点从输入空间通过核函数映射到高维空间，增加了各数据样本类之间的差别，极大提高了非线性聚类的性能。本文结合浅地表介质的特性，使用核聚类描述不同物性参数的聚类特征，进行浅地表地震和直流电阻率数据的联合反演，并通过改善反演处理的流程，试图在一定程度上缓解已有的耦合方法的缺点。
 
 \subsection{章节安排和创新点}
+
+\subsubsection{章节安排}
+
+第一章：绪论。本章首先介绍了本文的选题的背景和意义，然后回顾了国内外地球物理联合反演方法的发展历程和研究现状，最后，简要介绍本文的内容安排和主要创新点。
+
+第二章：原理和方法。本章首先回顾了反演的基本理论，简要介绍了反演问题的定义以及研究时需要使用的正则化参数的意义；之后对常用的联合反演方法进行了简介，并且着重介绍了本文使用的KFCM方法与改进的GKFCM方法。
+
+第三章：地震走时与电法数据物性联合反演。本章提出KFCM聚类耦合方法引入到浅地表地震折射和直流电阻率数据中，并相应的算法应用到野外实例--浙江杭州良渚遗址探测中。本章着重介绍了关于联合反演需要调整的数组参数，以及如何利用多种统计学方法得到最优的参数并将其用于反演中。反演的结果显示，在地质体划分上KFCM聚类方法的结果明显要优于单独反演。
+
+第四章：结果与分析。本章展示了对杭州良渚遗址地下结构单独反演的浅地表地震折射数据的反演结果以及直流电阻率数据的单独反演结果，以及使用KFCM聚类联合反演的结果，并且从模型结构和数据两个方面比较了两种方法的差异和优劣。
+
+第五章：结论与展望。总结了本文的主要研究工作，并对下一步的研究工作就行了合理的展望。
+
+\subsection{本文的创新点}
+
+1. 本文提出利用核聚类耦合方法对浅地表地震走时数据和直流电阻率数据进行联合反演，通过数据融合，降低反演的多解性，提高反演结果分界面的清晰程度。
+
+2. 本文使用DPC聚类方法处理先验岩石物理数据，可以通过聚类的结果直观地判断簇信息的正确性和有效性。
