--- a/body/undergraduate/final/abstract.tex
+++ b/body/undergraduate/final/abstract.tex
@@ -3,8 +3,15 @@
     \bfseries \zihao{3} 摘要
 \end{center}
 
+随着科技的发展，人类对地下结构探测的精度在不断提高，仅通过单一地球物理数据集在成像已经在浅地表这种复杂的环境中有时已经不能达到要求。因此，本文开展了对地震折射走时（Seismic refraction tomography, SRT）和电法（Electrical resistivity tomography, ERT）的主动源数据的单独反演与 KFCM（Kernelized Fuzzy C-Means，带核的模糊 C-均值）聚类联合反演，试图通过对先验信息和多种地球物理数据集的合理利用，以增强对浅地表地质目标的探测能力与刻画能力。本文对杭州良渚遗址地区进行了上述两种方法数据的成像，详细地阐述了 核聚类联合反演中参数的选取顺序和选取原则，并从多方面比较两种反演方法最后得到的模型，证明了 核聚类联合反演能够改善单一数据集反演结果，并且加入先验物性中心后的联合反演可以对团簇状分布非连续关系的介质有着一定的适应能力。
+
+\textbf{关键词}：联合反演；核聚类；模糊C-均值；浅地表探测
 
 \cleardoublepage{}
 \begin{center}
     \bfseries \zihao{3} Abstract
 \end{center}
+
+With the development of science and technology, the accuracy of detection of subsurface structures is constantly improving, and it is sometimes really hard to meet the requirements in complex environments where imaging is on the shallow surface only through a single geophysical data set. Therefore, this paper carried out the individual inversion and KFCM(Kernelized Fuzzy C-Means) joint inversion of the active source data of Seismic refraction tomography (SRT) and Electrical resistivity tomography(ERT), trying to use prior information and a variety of geophysical data sets to enhance the ability to detect and describe shallow subsurface geophysical targets. In this paper, these two methods are carried out on the Liangzhu relics area in Hangzhou, and the order and principles of parameters selection in the KFCM joint inversion are explained in detail, and the final models obtained by the two inversion methods are compared in many aspects, which proves that KFCM joint inversion can improve the inversion results of a single data set, and the joint inversion after adding a priori physical property center can have a certain ability to adapt to the medium with cluster-like distribution and discontinuous relationship.
+
+\textbf{Keywords}：Joint inversion；Clustering；Kernelized Fuzzy C-Means；Subsurface detection
