--- a/body/undergraduate/proposal/review/review.tex
+++ b/body/undergraduate/proposal/review/review.tex
@@ -4,7 +4,7 @@
 
 \section{背景介绍}
 
-地球物理反演是我们观测地下介质体结构的重要方法，而对于浅地表的地球物理反演来说，我们观测的范围在几十厘米到几十米的范围。尽管我们可以使用钻孔得到来自探测范围内的某些样本，但是我们对于地下结构的认识大部分仍旧来自通过假设模型进行数值模拟得到的输出，并且与地球物理观测进行比较得到的结果，在这些情况下，地球物理的模型大多是通过正演建模反复实验生成的。通过正演生成的模型很大程度上与先验信息有关系，这种模型需要反映地质结构，是大量实验得出的结果（Leibeckeretal.，2002；Gatzemeier 和 Moorkamp，2005;Heise 等，2008）。不过随着近年来的算力的普遍提高，大量的地球物理模型已经由反演程序构建。这些可接受的模型，通常是它们所预测的数据符合最小二乘意义上的观测结果（Wheelock 等，2015）。通常求解这种问题存在大量不同的算法Nocedal（2006）、 Snieder和Trampert（1999）、Tarantola（2004）、Menke（2012）、Mosegaard和Hansen（2016））。而在勘探地球物理中，出于对工程设计的目的，对分辨率和定性定量解释有着更高的要求；更为重要的是，地球物理数据的反演问题往往具有多解性和非唯一性，前者指的是无限数量的模型可以解释数据相同程度的不确定性（例如，Munooz 和 Rath，2006）， 后者指的是相似的数据可能导致截然不同的模型（例如，Backus 和 Gilbert，1967）。同时，不同的探测手段也会有各自的问题，例如电阻率法勘探，因电阻率勘探具有体积效应，在确定地层具有含水体的基础上无法确定含水量的大小（Gao, 2015）。因此多种岩石属性数据联合反演解释作为一种有效途径，可以改善地球物理方法多解性以及单一方法无法解决浅地表工程地质问题的情况。\cite{zjuthesisrules}
+地球物理反演是我们观测地下介质体结构的重要方法，而对于浅地表的地球物理反演来说，我们观测的范围在几十厘米到几十米的范围。尽管我们可以使用钻孔得到来自探测范围内的某些样本，但是我们对于地下结构的认识大部分仍旧来自通过假设模型进行数值模拟得到的输出，并且与地球物理观测进行比较得到的结果，在这些情况下，地球物理的模型大多是通过正演建模反复实验生成的。通过正演生成的模型很大程度上与先验信息有关系，这种模型需要反映地质结构，是大量实验得出的结果（Leibeckeretal.，2002；Gatzemeier 和 Moorkamp，2005;Heise 等，2008）。不过随着近年来的算力的普遍提高，大量的地球物理模型已经由反演程序构建。这些可接受的模型，通常是它们所预测的数据符合最小二乘意义上的观测结果（Wheelock 等，2015）。通常求解这种问题存在大量不同的算法Nocedal（2006）、 Snieder和Trampert（1999）、Tarantola（2004）、Menke（2012）、Mosegaard和Hansen（2016））。而在勘探地球物理中，出于对工程设计的目的，对分辨率和定性定量解释有着更高的要求；更为重要的是，地球物理数据的反演问题往往具有多解性和非唯一性，前者指的是无限数量的模型可以解释数据相同程度的不确定性（例如，Munooz 和 Rath，2006）， 后者指的是相似的数据可能导致截然不同的模型（例如，Backus 和 Gilbert，1967）。同时，不同的探测手段也会有各自的问题，例如电阻率法勘探，因电阻率勘探具有体积效应，在确定地层具有含水体的基础上无法确定含水量的大小（Gao, 2015）。因此多种岩石属性数据联合反演解释作为一种有效途径，可以改善地球物理方法多解性以及单一方法无法解决浅地表工程地质问题的情况。
 \newpage
 \section{国内外研究现状}
 
@@ -31,6 +31,7 @@ Yang等提出了一种基于聚类和多元地质统计学的电-震联合建模
 2. 在基于温纳和温纳-斯伦贝谢的联合电法反演中，以往的研究呈现出了不错的结果。但是对于其他的电极排列，由于不同电极排列的特征差异，我们需要依赖“基准”阵列进行电法数据的矫正。
 
 \newpage
+\nocite{*}
 \begingroup
     \linespreadsingle{}
     \printbibliography[title={参考文献}]
