--- a/body/undergraduate/final/acknowledgement.tex
+++ b/body/undergraduate/final/acknowledgement.tex
@@ -2,3 +2,7 @@
 \begin{center}
     \bfseries \zihao{3} 致谢
 \end{center}
+
+感谢石战结老师提供的数据和大量指导让我得以完成这篇文章。感谢王超学长提供的部分程序以及帮助，它们对我文章起到了巨大帮助。感谢Python和\LaTeX 优秀的开源工作者为我提供了所有需要的编程环境和写作环境。感谢UCSD的\hyperlink{https://github.com/TheNetAdmin/zjuthesis}{@TheNetAdmin}提供的\LaTeX 模板。
+
+感谢父母一直以来对我支持我的学业，感谢地球科学学院所有老师四年来对我的关照，也感谢地质专业的同学对我方方面面的帮助。
